Fix styling issues on devtools on safari

--- a/interface/popup-android/style.css
+++ b/interface/popup-android/style.css
@@ -86,6 +86,7 @@ svg.icon {
     padding-left: 2.7em;
     transition: background-color 100ms linear;
     border: 1px solid rgb(150,150,150);
+    color: #000000;
 }
 
 #cookie-container #searchField:hover, #cookie-container #searchField:focus {
